# envlib-ingest-base

./: .dockerignore  Dockerfile  OPEN_WORK.md  README.md  docker-compose.yml  pyproject.toml  requirements_base.txt  requirements_envlib.txt
.github/workflows/: test.yml
envlib_ingest_base/: __init__.py  resample.py  tsortho.py
envlib_ingest_base/tests/: test_resample.py  test_tsortho.py
